# same-project

./: .azureml.sh.sample  .azureml_env_variables.sh.sample  .env.sample  .flake8  .gitignore  .gitmodules  .pylintrc  404.html  Dockerfile  README.md  config.json.sample  index.html  ocean.sh  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  sitemap.xml
.azureml/: conda_dependencies.yml  docker  local
.devcontainer/: Dockerfile  devcontainer.json  first-run-notice.txt  py.sh
.devcontainer/custom-scripts/: devcontainer-init.sh  docker-bind-mount.sh  setup-user.sh
.devcontainer/library-scripts/: README.md
.github/: labeler.yml
.github/workflows/: build.yaml  ci.yml  labeler.yaml  pull_requests.yaml  tests.yaml
backends/: executor.py
backends/aml/: deploy.py  render.py
backends/azure-functions/: __main__.py  requirements.txt
backends/azure-functions/exec_step/: context.py  exec_step.py  function.json
backends/azure-functions/execute_step/: README.md  context.py  execute_step.py  function.json
backends/azure-functions/utils/: context.py  http_utils.py
backends/common/: code_executor.py  exception_utils.py  http_utils.py  serialization_utils.py
backends/durable-functions/: .gitignore  requirements.txt
backends/durable-functions/execute_step/: context.py  execute_step.py  execution_environment.py  function.json
backends/durable-functions/execute_steps_workflow/: __init__.py  context.py  execute_steps_workflow.py  function.json
backends/durable-functions/start_steps_workflow/: __init__.py  context.py  start_steps_workflow.py
backends/durable_functions/: constants.py
backends/durable_functions/execute_step/: context.py  execute_step.py  function.json
backends/durable_functions/execute_steps_workflow/: execute_steps_workflow.py
backends/durable_functions/get_object/: context.py  function.json  get_object.py
backends/durable_functions/set_object/: function.json  set_object.py
backends/durable_functions/start_steps_workflow/: function.json  start_steps_workflow.py
backends/kubeflow/: deploy.py  render.py
blog/2022-06-15-Introducing-The-SAME-Project/: index.html
cli/: README.md  __init__.py  main.py
cli/same/: __init__.py  helpers.py  main.py  mapping.py  objects.py  same_config.py  stdlib.py
clients/: context.py  durable_functions_client.py
docs/: README.md  mkdocs.yml  pyproject.toml
docs/docs/: CNAME
docs/docs/blog/: 2022-06-15-Introducing-The-SAME-Project.md  2022-xx-xx-Decentralized-AI-with-The-SAME-Project.md  _index.md
docs/docs/blog/articles/: 2022-06-13-SAME-Porject-blog-test.md  _index.md
docs/docs/community/: adopters.md  presentations.md
docs/docs/developer/: debug.md  developer.md
docs/docs/getting-started/: .pages  _index.md  adding-steps.md  changing-environment.md  dev-build.md  example-notebook.md  first-notebook.md  installing.md  setting-up-azureml.md  working-with-datasets.md
docs/docs/stylesheets/: extra.css
docs/overrides/: home.html
docs/overrides/assets/stylesheets/: home.css
examples/: root_pipeline_3ea7c8df9e7d45fc8aebaa1857a7d08f.py
examples/same_step_000_afdeddf09e474ffdbe0543fd0d775bbd/: same_step_000_afdeddf09e474ffdbe0543fd0d775bbd.py
getting-started/adding-steps/: index.html
getting-started/changing-environment/: index.html
getting-started/dev-build/: index.html
getting-started/example-notebook/: index.html
getting-started/installing/: index.html
getting-started/working-with-datasets/: index.html
jupyter/kernel/: context.py  kernel_logger.py  same_kernel.py  setup.py
objects/: __init__.py  context.py  execution_environment.py  json_serializable_object.py  lazy_execution_environment.py  lazy_loading_namespace.py  observable_dict.py  step.py
ocean_c2d/: render_ocean.py  requirements.txt  same.yaml
sameproject/: README.md  __init__.py  main.py  mapping.py  same_config.py
sameproject/backends/: README.md  executor.py
sameproject/cli/: __init__.py  init.py  options.py  run.py  verify.py  version.py
sameproject/data/: __init__.py  config.py  example.py  json_serializable_object.py  step.py
sameproject/ops/: __init__.py  backends.py  code.py  explode.py  files.py  notebooks.py  requirements.py  runtime_options.py
sameproject/program/: __init__.py  commands.py
sameproject/sdk/: README.md  __init__.py  conda_env.py  dataset.py  importer.py
sameproject/version/: commands.py
scripts/: deploy-azure-functions-backend.sh  deploy-durable-functions-backend.sh  deploy-kubeflow-on-minikube.sh  deploy_durable_functions_backend.sh  generate-azure-functions-app-package.sh  generate-durable-functions-app-package.sh  generate_durable_functions_app_package.sh
sdk/: README.md  __init__.py  build_submit_package.sh  setup.py
sdk/same/: __init__.py  conda_env.py  core.py  helpers.py  importer.py
search/: search_index.json
stylesheets/: extra.css
templates/aml/: root.jinja  step.jinja
templates/kubeflow/: root.jinja
test/: README.md  conftest.py  constants.py  local-test.env
test/backends/: context.py  test_azure_functions.py  test_durable_functions.py  test_durable_functions_backend.py  test_kubeflow.py  test_kubeflow_backend.py
test/cli/: fuzzer.py  placeholder_test.py  test_compile.py  test_helpers.py  test_init.py  test_run.py  test_same_config.py  test_version.py
test/clients/: context.py  test_durable_functions_client.py
test/data/: test_config.py  test_example.py
test/ops/: test_execution.py  test_explode.py  test_files.py  test_notebooks.py  test_requirements.py  test_runtime_options.py
test/program/: test_compile.py
test/sdk/: placeholder_test.py  same.yaml  sample_nb.ipynb  test_conda_read_write.py  test_dataset.py  test_import.py
test/testdata/: README.md  __init__.py  testdata.py
test/testdata/generic_notebook/: pyproject.toml  requirements.txt  same.yaml  sample_notebook.ipynb
test/transformers/: context.py  test_numpy_to_nums_transformer.py  test_pandas_to_dask_transformer.py
transformers/: context.py  numpy_to_nums_transformer.py  pandas_to_dask_transformer.py  transformer.py
(+298 files in other folders)
