[tool.poetry]
name = "sameproject"
version = "0.1.16"
description = "Notebooks to Pipelines, reproducible data science, oh my."
authors = ["David Aronchick <aronchick@gmail.com>", "Luke Marsden <me@lukemarsden.net>"]

[tool.poetry.scripts]
same = 'sameproject.main:main'

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
click = "^7"
jupytext = "^1.11.5"
pywin32 = { version = ">=301", platform = 'win32'}
jupyter = "^1.0.0"
Cerberus = "^1.3.4"
python-box = "^5.4.1"
dill = "^0.3.4"
requests = "^2.26.0"
Jinja2 = "^3.0.1"
kfp = "^1.8.2"
"ruamel.yaml" = "0.17.4"
kubernetes = "^18.20.0"
numpy = "^1.21.2"
tblib = "^1.7.0"
metakernel = "^0.27.5"
regex = "^2021.11.10"
azureml-core = "^1.37.0"
pandas = "^1.4.0"
johnnydep = "^1.8"
conda = "^4.3.16"
cytoolz = "^0.11.2"

[tool.poetry.extras]
# AzureML seems to have binary components which don't work on Python >3.8 or
# aarch64 ("M1") macOS, which severely restricts where SAME can run (e.g. not
# on Ubuntu 21.10), so we make it optional.
azureml = [
    "azureml-dataprep-rslex",
    "azureml-core",
    "azureml-pipeline",
    "azureml-dataprep-native",
]

[tool.poetry.dev-dependencies]
pip-tools = "^6.2.0"
pytest = "^6.2.5"
pytest-cov = "^2.12.1"
black = {version = "^21.8b0", allow-prereleases = true}
flake8 = "^3.9.2"
ipython = "^7.27.0"
mock = "^4.0.3"
pytest-virtualenv = "^1.7.0"
johnnydep = "^1.8"
build = "^0.6.1"
pip = "^21.2.4"
ipykernel = "^6.4.1"
pytest-mock = "^3.6.1"
setuptools = "^58.0.4"
wheel = "^0.37.0"
python-dotenv = "^0.19.0"


[tool.black]
line-length = 119

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "test",
]
norecursedirs = ["vendor",".venv"]
