[tool.poetry]
name = "sameproject"
version = "0.2.3"
description = "Notebooks to Pipelines, reproducible data science, oh my."
authors = ["David Aronchick <aronchick@gmail.com>", "Luke Marsden <me@lukemarsden.net>"]

[tool.poetry.scripts]
same = 'sameproject.main:main'

[tool.poetry.dependencies]
python = "~3.8"
click = ">=8.1"
jupytext = "^1.11.5"
jupyter = "^1.0.0"
Cerberus = "^1.3.4"
python-box = "^5.4.1"
dill = "^0.3.4"
requests = "^2.26.0"
Jinja2 = "^3.0.1"
kfp = "^1.8.12"
"ruamel.yaml" = "0.17.4"
kubernetes = "^18.20.0"
numpy = "^1.21.2"
tblib = "^1.7.0"
metakernel = "^0.27.5"
regex = "^2021.11.10"
pandas = "^1.4.0"
johnnydep = "^1.8"
cytoolz = "^0.11.2"
Pympler = "^1.0.1"
docker = "^5.0.3"

[tool.poetry.extras]
azureml = [
    "azureml-core",
    "azureml-pipeline",
    "azure-mgmt-applicationinsights",
    "azure-mgmt-web",
]
dev = [
"PyJWT",
"pip-tools",
"pytest",
"pytest-cov",
"flake8",
"ipython",
"mock",
"pytest-virtualenv",
"johnnydep",
"build",
"pip",
"ipykernel",
"pytest-mock",
"setuptools",
"wheel",
"python-dotenv",
"pytest-xdist",
"black"]

[tool.black]
line-length = 119

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "test",
]
norecursedirs = ["vendor",".venv"]