[tool.poetry]
name = "sameproject"
version = "0.2.3"
description = "Notebooks to Pipelines, reproducible data science, oh my."
authors = ["David Aronchick <aronchick@gmail.com>", "Luke Marsden <me@lukemarsden.net>"]

[tool.poetry.scripts]
same = 'sameproject.main:main'

[tool.poetry.dependencies]
python = "~3.8"
click = ">=8.1"
jupytext = "^1.11.5"
jupyter = "^1.0.0"
Cerberus = "^1.3.4"
python-box = "^5.4.1"
dill = "^0.3.4"
requests = "^2.26.0"
Jinja2 = "^3.0.1"
kfp = "^1.8.12"
"ruamel.yaml" = "0.17.4"
kubernetes = "^18.20.0"
numpy = "^1.21.2"
tblib = "^1.7.0"
metakernel = "^0.27.5"
regex = "^2021.11.10"
pandas = "^1.4.0"
johnnydep = "^1.8"
cytoolz = "^0.11.2"
Pympler = "^1.0.1"
docker = "^5.0.3"
docopt = "^0.6.2"
yarg = "^0.1.9"
pipreqs = "^0.4.11"

# AzureML
azureml-core = {version = "^1.42.0", optional = true }
azure-mgmt-applicationinsights = {version = "^3.1.0", optional = true }
azure-mgmt-web = { version = "6.1.0", optional = true }
azureml-pipeline = { version = "^1.42.0", optional = true }

# Dev
PyJWT = { version = "^2.4.0", optional = true }
pip-tools = {version = "^6.6.2", optional = true}
pytest = {version = "^7.1.2", optional = true}
pytest-cov = {version = "^3.0.0", optional = true}
flake8 = { version = "^3.9.2", optional = true }
ipython = {version = "^8.4.0", optional = true}
mock = {version = "^4.0.3", optional = true}
pytest-virtualenv = {version = "^1.7.0", optional = true}
build = { version = "^0.6.1", optional = true }
pip = { version ="^22.1.2", optional = true}
ipykernel = {version = "^6.13.0", optional = true}
pytest-mock = { version = "^3.6.1", optional = true }
setuptools = { version = "^62.3.2", optional = true }
wheel = {version = "^0.37.1", optional = true}
python-dotenv = {version = "^0.20.0", optional = true}
pytest-xdist = { version = "^2.5.0", optional = true }
black = { version = "^22.3.0", optional = true }

[tool.poetry.extras]

azureml = [
    "azureml-core",
    "azureml-pipeline",
    "azure-mgmt-applicationinsights",
    "azure-mgmt-web",
]

dev = [
    "PyJWT",
    "pip-tools",
    "pytest",
    "pytest-cov",
    "flake8",
    "ipython",
    "mock",
    "pytest-virtualenv",
    "johnnydep",
    "build",
    "pip",
    "ipykernel",
    "pytest-mock",
    "setuptools",
    "wheel",
    "python-dotenv",
    "pytest-xdist",
    "black"
]

[tool.black]
line-length = 119

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "test",
]
norecursedirs = ["vendor",".venv"]
