[tool.poetry]
name = "same-website"
version = "0.1.0"
description = ""
authors = ["David Aronchick <aronchick@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
mkdocs = "^1.2.1"
mkdocs-material = "^7.1.8"
pymdown-extensions = "^8.2"
fontawesome-markdown = "^0.2.6"
PyGithub = "^1.54.1"
ipython = "^8.0.1"
regex = "^2021.3.17"
mkdocs-material-extensions = "^1.0.3"
mkdocs-awesome-pages-plugin = "^2.7.0"
mkdocs-same-dir = "^0.1.1"
mkdocs-section-index = "^0.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
